# librmilter

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindGLIB2.cmake
include/: libmilter_ev.h  librmilter.h  librmilter_event.h
src/: librmilter.c  librmilter_internal.h  logger.c  logger.h  session.c  session.h
